Design swagger API's
